# Nums

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  out.mvm  out.vasm  reflect.config.json  settings.gradle.kts
.github/workflows/: graal.yml
__old/src/error_handling/: mod.rs
__old/src/frontend/: ast.rs  mod.rs  nums_compiler.rs  source.rs
__old/src/test/: t.nums
__old/src/tests/: lexer.rs  mod.rs
include/: hl.h
src/: lib.rs  main.nums  main.rs  token.rs
src/cli/: read_file.rs
src/compiler/: ast.rs  compiler.rs  mod.rs  nums_compiler.rs  source.rs  token.rs  tokens.rs  visitor.rs
src/compiler/nodes/: decl.rs  expr.rs  mod.rs  path.rs  stmt.rs
src/compiler/parser/: ast.rs  mod.rs  parse.rs  peekable_parser.rs
src/compiler/types/: mod.rs  type_checker.rs  types.rs
src/error_handling/: faults.rs  mod.rs  span.rs
src/frontend/: ast.rs  mod.rs  nums_compiler.rs  source.rs  tokens.rs
src/frontend/nodes/: decl.rs  expr.rs  stmt.rs
src/frontend/parser/: mod.rs  parse.rs  peekable_parser.rs  spanner.rs
src/frontend/visitor/: walker.rs
src/frontend/walker/: stmt  walker.rs
src/main/java/: COpcode.java  HashLink.java  Opcodes.java
src/main/kotlin/: DefaultVisitors.kt  EnvironmentManager.kt  Main.kt  ModuleResolver.kt  Native.kt  NumsGrammar.kt  NumsWriter.kt  RegisterTracker.kt  Semantics.kt  StaticAnalysis.kt  visitor.kt
src/main/resources/: abc.nums  bcd.nums  file.ssa  out.nums  test.nums
src/parser/: AST.rs  mod.rs  parse.rs  peekable_lexer.rs  peekable_parser.rs
src/test/: t.nums
src/tests/: ast.rs  lexer.rs
(+50 files in other folders)
