[package]
name = "nums"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dna"
path = "src/main.rs"

[dependencies]
nums_vm = {path = "../numsVM"}
logos = "0.12.0"
smol_str = "0.1.21"
peekmore = "1.0.0"
